src/main/resources/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
spec:
  hosts:
    - "*"
  gateways:
    - otus-ingress-gateway
  http:
  - route:
    - destination:
        host: otus-app-helm
        subset: v1
      weight: 50
    - destination:
        host: otus-app-helm-v2
        subset: v2
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus-app-helm
spec:
  host: otus-app-helm
  subsets:
    - name: v1
      labels:
        version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus-app-helm-v2
spec:
  host: otus-app-helm-v2
  subsets:
    - name: v2
      labels:
        version: v2
